Change potential bad casts to be saturated and remove redundant casts (#2433)