@@ -3,8 +3,8 @@ package com.gregtechceu.gtceu.integration.ae2.gui.widget.list;
 import com.gregtechceu.gtceu.api.gui.GuiTextures;
 import com.gregtechceu.gtceu.client.TooltipsHandler;
 import com.gregtechceu.gtceu.integration.ae2.utils.AEUtil;
+import com.gregtechceu.gtceu.utils.GTMath;
 
-import com.lowdragmc.lowdraglib.Platform;
 import com.lowdragmc.lowdraglib.gui.util.DrawerHelper;
 import com.lowdragmc.lowdraglib.gui.widget.Widget;
 import com.lowdragmc.lowdraglib.side.fluid.FluidHelper;
@@ -55,7 +55,7 @@ public class AEFluidDisplayWidget extends Widget {
         int stackY = position.y + 1;
         if (fluid != null) {
             FluidStack fluidStack = fluid.what() instanceof AEFluidKey key ?
-                    key.toStack((int) fluid.amount()) : FluidStack.EMPTY;
+                    key.toStack(GTMath.saturatedCast(fluid.amount())) : FluidStack.EMPTY;
             DrawerHelper.drawFluidForGui(graphics, fluidStack, fluid.amount(), stackX, stackY, 16, 16);
             String amountStr = String.format("x%,d", fluid.amount());
             drawText(graphics, amountStr, stackX + 20, stackY + 5, 1, 0xFFFFFFFF);
@@ -73,11 +73,7 @@ public class AEFluidDisplayWidget extends Widget {
                 FluidStack fluidStack = AEUtil.toFluidStack(fluid);
                 List<Component> tooltips = new ArrayList<>();
                 tooltips.add(fluidStack.getHoverName());
-                tooltips.add(Component.literal(String.format("%,d ", fluid.amount())).append(FluidHelper.getUnit()));
-                if (!Platform.isForge()) {
-                    tooltips.add(Component.literal(
-                            "§6mB:§r %d mB".formatted(fluidStack.getAmount())));
-                }
+                tooltips.add(Component.literal(String.format("%,d mB", fluid.amount())));
                 TooltipsHandler.appendFluidTooltips(fluidStack.getFluid(), fluidStack.getAmount(), tooltips::add,
                         TooltipFlag.NORMAL);
                 graphics.renderTooltip(Minecraft.getInstance().font, tooltips, Optional.empty(), mouseX, mouseY);
